[gd_scene load_steps=8 format=3 uid="uid://dy88dskul8cik"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_e3x3s"]
[ext_resource type="PackedScene" uid="uid://m8ulht5e02n" path="res://Scenes/health_bar.tscn" id="2_tejjf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6b6mh"]

[sub_resource type="CanvasTexture" id="CanvasTexture_huglx"]
specular_color = Color(0.964706, 0.831373, 0.92549, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cd4ji"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_xvcip"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4vwue"]
radius = 42.0476

[node name="Player" type="CharacterBody2D"]
material = SubResource("ShaderMaterial_6b6mh")
script = ExtResource("1_e3x3s")

[node name="PlayerSprite" type="Sprite2D" parent="."]
modulate = Color(0.180392, 1, 1, 1)
position = Vector2(-2.38419e-07, 8.34465e-07)
scale = Vector2(20, 20)
texture = SubResource("CanvasTexture_huglx")

[node name="player_collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cd4ji")
debug_color = Color(0, 0.564706, 0.662745, 0.419608)

[node name="Bullets" type="Node" parent="."]

[node name="Bullet_Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
material = SubResource("CanvasItemMaterial_xvcip")
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="coin_area_2D" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin_area_2D"]
shape = SubResource("CircleShape2D_4vwue")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="UI" instance=ExtResource("2_tejjf")]
anchors_preset = 10
anchor_right = 1.0
offset_right = 0.0
grow_horizontal = 2

[node name="Coins_Label" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -158.0
offset_top = 17.0
offset_bottom = 101.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "Coins
"
vertical_alignment = 1

[connection signal="timeout" from="Bullet_Timer" to="." method="_on_bullet_timer_timeout"]
